--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,19 @@ header{
     max-width: 500px;
     padding: 5vh 2vw;
 }
+
+.cardContainer{
+    position: relative;
+    display: flex;
+    margin-top: 14vh;
+    border: 1px solid rgba(211, 211, 211, 0.2);
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.1);
+}
+
+.card{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+}
